mission-2/deploy-apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
spec:
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: httpd
          resources:
            limits:
              memory: '128Mi'
              cpu: '100m'
          ports:
            - containerPort: 80
